Create CI action to build APK and update README with link to APK.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/scanSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Scan"
+        android:text="@string/scanSwitch"
         android:checked="true"
         app:layout_constraintBottom_toTopOf="@id/plot"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,6 +25,7 @@
         android:maxLength="4"
         android:textSize="8pt"
         android:enabled="false"
+        android:hint="@string/freqSelector"
         app:layout_constraintBottom_toTopOf="@id/plot"
         app:layout_constraintLeft_toRightOf="@id/scanSwitch"
         app:layout_constraintRight_toRightOf="parent"
